# PigeonTask

Analysis/Python/: README.md  main.py  pyproject.toml
Analysis/Python/.claude/: settings.json
Analysis/Python/notebooks/: Figure02S01_RRSummary.ipynb  Figure02S1_RRSummary.ipynb  Figure02_performanceSummary.ipynb  Figure03S01_congruenceByRT.ipynb  Figure03S02_boundTest.ipynb  Figure03_boundSummary.ipynb  Figure04_RRvsBound.ipynb  Figure05S01_boundDiffByDT.ipynb  Figure05S02_RRMapExploration.ipynb  Figure05S1_RRMapExploration.ipynb  Figure05X_RRMapExploration.ipynb  Figure05_mixedVsBlockedSNR.ipynb  Figure06X_cpPlaypen.ipynb  Figure06_cpSummary.ipynb  Figure07_RRSummary.ipynb  Figure07_biasCorrection.ipynb  Make_RRMatrix.ipynb  Make_biasCorrection.ipynb  RRMatrix.ipynb  Table_slopeAnalyses.ipynb  Test_NDT.ipynb  Test_TrialQuality.ipynb  Test_boundDefinition.ipynb  Test_cpData.ipynb
Analysis/Python/pigeon/: data.py  pathDefaults.py  simulate.py  stats.py
Task/PsychoPy/: PigeonTask-legacy-browsers.js  PigeonTask.js  PigeonTask.psyexp  PigeonTask_lastrun.py  index.html
Task/PsychoPy/Resources/: PigeonGeneralInstructionsConditions.xlsx  PigeonSNRSet01Conditions.xlsx  PigeonSNRSet02Conditions.xlsx  PigeonSimpleDemoConditions.xlsx  PigeonStatusInstructionsConditions.xlsx  PigeonTaskConditions.xlsx  Pigeon_online_InstructionsConditions.xlsx  Pigeon_predefined_commit_InstructionsConditions - Copy.xlsx  notes.rtf
