[project]
name = "pigeon-analysis"
version = "0.1.0"
description = "Analysis code for the Pigeon decision-making task (Kalburge et al.)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
